# PinSphere

./: .gitignore  README.md
.github/workflow/: lint_check.yml
.github/workflows/: lint_check.yml  server_lint_check.yml  webapp_lint_check.yml
.github/workflows/workflow/: lint_check.yml
app/: package-lock.json
app/app/(tabs)/: _layout.tsx
server/: Dockerfile  Makefile  README.md  alembic.ini  celery_app.py  conf.py  config.py  conftest.py  deply.sh  docker-compose.yml  env.example  history.sqlite  image_test.py  ipython_config.py  log_conf.yaml  logging_conf.py  main.py  pyproject.toml  pyrightconfig.json  setup_logging.py
server/core/: baseErrors.py  boto3_client.py  caching.py  dependency_injectors.py  embedding_generation.py  prompt_builder.py  prompts.py  redis_utils.py  storage.py  types.py
server/core/authflow/: auth.py  service.py
server/core/database/: base_model.py  session_manager.py
server/core/dependency_injector/: README.md  __init__.py  asyncpg_di.py  errors.py  injector.py  redis_di.py
server/core/models/: __init__.py  content.py  images.py  user.py
server/docs/: conf.py
server/pin_sphere/: api.py  base_exception.py  constants.py  exception_handling.py
server/pin_sphere/auth/: endpoint.py  exceptions.py  schemas.py  service.py
server/pin_sphere/comments/: endpoint.py  errors.py  schemas.py  service.py
server/pin_sphere/content/: endpoint.py  exceptions.py  schemas.py  service.py  tasks.py  utils.py
server/pin_sphere/images/: endpoint.py  exceptions.py  schemas.py  service.py  tasks.py  utils.py
server/pin_sphere/user/: endpoints.py  schemas.py  service.py
server/pin_sphere/users/: endpoint.py  endpoints.py  filters.py  schemas.py  service.py
server/scripts/: create_env.py  reset_and_apply_migrations.sh
server/scripts/migrations/: env.py
server/scripts/migrations/versions/: 0262df2a44e6_create_settings_jsonb_column.py  150fd008817a_add_embedding_column_to_content_table_.py  45ec72a5ba3a_add_bio_column_to_user_table.py  463fb820ea97_create_metadata_column_in_images_table.py  47946b048d2a_renamed_images_table_to_contents_table.py  53c200918d00_create_users_table.py  6961a0c1fd7a_add_likes_count_in_content_table.py  709651871443_create_comments_related_tables.py  81e7346f8f87_add_description_in_images_table.py  aa650c854c54_replace_username_field_with_user_id.py  b528836febac_add_id_column_to_users_table.py  c0baea2b3c96_add_auth_type_to_users_table.py  c584eaf8575f_add_profile_photo_in_users_table.py  f2e1a69354d4_create_images_table.py
server/startup/: 00-imports.py  entrypoint.sh
server/tests/: fixtures.py
server/tests/test_users/: fixtures.py  test_api.py
webapp/: README.md  declarations.d.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
webapp/src/: App.tsx  api_client.tsx  constants.tsx  main.tsx  style.css  types.ts  types.tsx  utils.ts  utils.tsx  what.txt
webapp/src/components/: Audio.tsx  ContentWithBlurhash.tsx  CreatePostModel.tsx  DarkModelToggle.tsx  FileUploadDropZone.tsx  FileUploadPreview.tsx  GoogleAuth.tsx  Header.tsx  ImagePreview.tsx  ImageWithBlurhash.tsx  MainView.tsx  MobileMenu.tsx  PasswordInput.tsx  PinOuter.tsx  PostComments.tsx  ProfileImage.tsx  RecentComments.tsx  SettingsMenu.tsx
webapp/src/components/settings/: AppearanceSettings.tsx  GeneralSettings.tsx  NotificationSettings.tsx  PrivacyAndSettings.tsx
webapp/src/components/shimmer/: CardsShimmer.tsx
webapp/src/hooks/: get_user.tsx
webapp/src/lib/: utils.ts
webapp/src/pages/: ContentPage.tsx  Home.tsx  ProfileUpdate.tsx  ProfileView.tsx  SearchContent.tsx  Settings.tsx  UserProfile.tsx  login.tsx  signup.tsx
webapp/src/service/: content_service.tsx  file_handler_service.tsx  file_upload_utils.ts  login_service.tsx  token_service.tsx  user_service.tsx
webapp/src/types/: userSettings.ts
