[project]
name = "server"
version = "0.1.0"
description = "A social platform to discover, share, and organize your favorite images. Explore creativity and connect through stunning visuals."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.6",
    "psycopg>=3.2.4",
    "pydantic-settings>=2.7.1",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.37",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0",
  "pyright>=1.1.391",
    "ruff>=0.9.1",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
type_check = { cmd = "pyright . ", help="Check Typing using Pyright in strict mode"}
lint = { cmd = "ruff format . && ruff check --fix .", help = "run linters with autofix" }
lint_check = { cmd = "ruff format --check . && ruff check .", help = "run ruff linter" }
clean = { cmd = "find * -name '*.pyc' -delete && find * -name '__pycache__' -delete", help = "clean up .pyc and __pycache__" }
reapply_migrations = {cmd="./scripts/reset_and_apply_migrations.sh", help = "downgrade and upgrade the migrations"}
apply_migration = {cmd="alembic upgrade head", help = "runs alembic upgrade command"}
downgrade_migration = {cmd="alembic downgrade -1", help = "runs alembic downgrade command"}

[tool.ruff]
target-version = "py310"
