[project]
name = "server"
version = "0.1.0"
description = "A social platform to discover, share, and organize your favorite images. Explore creativity and connect through stunning visuals."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "asgi-correlation-id>=4.3.4",
    "asyncpg>=0.30.0",
    "blurhash-python",
    "boto3>=1.36.11",
    "boto3-stubs[all]>=1.36.16",
    "celery[librabbitmq]>=5.4.0",
    "faker>=33.3.1",
    "fastapi-pagination>=0.12.34",
    "fastapi[all]>=0.115.6",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=11.1.0",
    "psycopg>=3.2.4",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "pytest>=8.3.4",
    "python-json-logger>=3.2.1",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.37",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0",
  "pyright>=1.1.391",
    "ruff>=0.9.1",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
type_check = { cmd = "pyright pin_sphere core ", help="Check Typing using Pyright in strict mode"}
lint = { cmd = "ruff format . && ruff check --fix .", help = "run linters with autofix" }
lint_check = { cmd = "ruff format --check . && ruff check .", help = "run ruff linter" }
clean = { cmd = "find * -name '*.pyc' -delete && find * -name '__pycache__' -delete", help = "clean up .pyc and __pycache__" }
reapply_migrations = {cmd = "alembic downgrade base && alembic upgrade head && echo 'Reapplied migration successfully'"}

[tool.ruff]
target-version = "py310"

[tool.uv.sources]
blurhash-python = { git = "https://github.com/woltapp/blurhash-python" }
